--- a/activity-succeed.html
+++ b/activity-succeed.html
@@ -32,11 +32,13 @@
 
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
-    <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-            <div class="alert alert-success">Successfully submitted!</div>
-            <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity.html'">BACK TO MAIN MENU</button>
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <div class="alert alert-success">Successfully submitted!</div>
+                <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity.html'">BACK TO MAIN MENU</button>
+            </div>
         </div>
     </div>
 
