--- a/activity-confirm.html
+++ b/activity-confirm.html
@@ -34,32 +34,30 @@
     <!-- This is a templete, do any thing between this line and the next comment line -->
     <div class="container-fluid">
         <div class="row-fluid">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
+            <div class="col-xs-1 col-sm-1"></div>
+            <div class="col-xs-10 col-sm-10">
                 <div class="alert alert-info"><h3>Please confirm your information and click the SUBMIT button below.</h3></div>
-                <div class="panel panel-primary">
-                    <div class="col-md-1">
-                        <li><strong>TITLE:</strong> XXXXXX</li>
-                        <li><strong>TIME:</strong> XXXXXX</li>
-                        <li><strong>LOCATION:</strong> XXXXXX</li>
-                        <li><strong>TAG:</strong> XXXXX</li>
-                        <li><strong>CAPACITY:</strong> XXXXX</li>
-                        <li><strong>HOST INFOMATION:</strong> XXXXX</li>
-                        <li><strong>DESCRIPTION:</strong> XXXXXXXXXX</li>
-                        <li><strong>PICTURE:</strong><img src="..." class="img-responsive" alt="Responsive image"><br>
-                    </div>
+                <div class="panel panel-primary">    
+                    <li><strong>TITLE:</strong> XXXXXX</li>
+                    <li><strong>TIME:</strong> XXXXXX</li>
+                    <li><strong>LOCATION:</strong> XXXXXX</li>
+                    <li><strong>TAG:</strong> XXXXX</li>
+                    <li><strong>CAPACITY:</strong> XXXXX</li>
+                    <li><strong>HOST INFOMATION:</strong> XXXXX</li>
+                    <li><strong>DESCRIPTION:</strong> XXXXXXXXXX</li>
+                    <li><strong>PICTURE:</strong><img src="..." class="img-responsive" alt="Responsive image"></li>    
                 </div>
                 <div class="row">
                     <div class="center">
                         <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity-succeed.html'">Submit</button>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
-                        <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity.html'">Back To Main Menu</button>
+                        <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity.html'">Main Menu</button>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
                         <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity-launch.html'">Back</button>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1"></div>
+            <div class="col-xs-1 col-sm-1"></div>
         </div>
     </div>
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
