--- a/activity-details.html
+++ b/activity-details.html
@@ -36,8 +36,8 @@
     <br>
     <div class="container-fluid">
         <div class="row-fluid">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
+            <div class="col-xs-1 col-sm-1"></div>
+            <div class="col-xs-10 col-sm-10">
                 <div class="panel panel-primary">
                     <div class="panel-heading">NBA GALA!</div>
                     <div class="panel-body">
@@ -59,9 +59,7 @@
                         <img src="..." class="img-responsive" alt="Responsive image"><br>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="center">
+                <div class="left">
                     <button class="btn btn-primary btn-lg" role="button">INTERESTED<span class=" glyphicon glyphicon-heart"></span></button>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
                     <button class="btn btn-primary btn-lg" role="button">ATTEND<span class=" glyphicon glyphicon-thumbs-up"></span></button>
@@ -69,7 +67,7 @@
                     <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity.html'">Back</button>
                 </div>
             </div>
-            <div class="col-md-1"></div>
+            <div class="col-xs-1 col-sm-1"></div>
         </div>
     </div>
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
