--- a/activity-launch.html
+++ b/activity-launch.html
@@ -36,8 +36,8 @@
     <h1 class="text-center">LAUNCH ONE</h1>
     <div class="container-fluid">
         <div class="row-fluid">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
+            <div class="col-xs-1 col-sm-1"></div>
+            <div class="col-xs-10 col-sm-10">
                 <form role="form">
                     <p class="help-block">* is required.</p>
                     <br>
@@ -84,7 +84,7 @@
                     </div>
                 </form>
             </div>
-            <div class="col-md-1"></div>
+            <div class="col-xs-1 col-sm-1"></div>
         </div>
     </div>
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
