--- a/activity-succeed.html
+++ b/activity-succeed.html
@@ -34,8 +34,8 @@
     <!-- This is a templete, do any thing between this line and the next comment line -->
     <div class="container-fluid">
         <div class="row-fluid">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
+            <div class="col-xs-1 col-sm-1"></div>
+            <div class="col-xs-10 col-sm-10">
                 <div class="alert alert-success">Successfully submitted!</div>
                 <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity.html'">BACK TO MAIN MENU</button>
             </div>
@@ -44,7 +44,7 @@
 
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
-    <div class="col-md-1"></div>
+    <div class="col-xs-1 col-sm-1"></div>
 </body>
 
 </html>
