--- a/activity-details.html
+++ b/activity-details.html
@@ -36,38 +36,40 @@
     <br>
     <div class="container-fluid">
         <div class="row-fluid">
-            <div class="col-xs-1 col-sm-1"></div>
-            <div class="col-xs-10 col-sm-10">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                
+                <br>
                 <div class="panel panel-primary">
                     <div class="panel-heading">NBA GALA!</div>
                     <div class="panel-body">
-                        <strong>TIME<span class=" glyphicon glyphicon-time"></span></strong><br>
+                        <strong><span class=" glyphicon glyphicon-time"></span>TIME</strong><br>
                         02-02 20:00-22:00<br>
-                        <strong>LOCATION<span class=" glyphicon glyphicon-map-market"></span></strong><br>
+                        <strong><span class=" glyphicon glyphicon-map-marker"></span>LOCATION</strong><br>
                         Engelhalt Room 325<br>
-                        <strong>TAG<span class=" glyphicon glyphicon-tag"></span></strong><br>
+                        <strong><span class=" glyphicon glyphicon-tag"></span>TAG</strong><br>
                         Basketball Game<br>
-                        <strong>CAPACITY<span class=" glyphicon glyphicon-upload"></span></strong><br>
-                        02-02 20:00-22:00<br>
-                        <strong>HOST INFOMATION<span class=" glyphicon glyphicon-user"></span></strong><br>
+                        <strong><span class=" glyphicon glyphicon-upload"></span>CAPACITY</strong><br>
+                        10<small>(people)</small><br>
+                        <strong><span class=" glyphicon glyphicon-user"></span>HOST INFOMATION</strong><br>
                         <li>Name: P. Linda</li>
                         <li>Email: Linda@u.northwestern.edu</li>
                         <li>Tel: 847-964-0087</li>
-                        <strong>DESCRIPTION<span class=" glyphicon glyphicon-list-alt"></span></strong><br>
+                        <strong><span class=" glyphicon glyphicon-list-alt"></span>DESCRIPTION</strong><br>
                         Are you feel bored of stressful study? Tonight we will watch NBA all-star game! Come and join us!<br>
-                        <strong>PICTURE<span class=" glyphicon glyphicon-picture"></span></strong><br>
-                        <img src="..." class="img-responsive" alt="Responsive image"><br>
+                        <strong><span class=" glyphicon glyphicon-picture"></span>PICTURE</strong><br>
+                        <img src="..." class="img-responsive" alt="Responsive image"><br>                        
                     </div>
                 </div>
-                <div class="left">
-                    <button class="btn btn-primary btn-lg" role="button">INTERESTED<span class=" glyphicon glyphicon-heart"></span></button>
+                <div class="center">
+                    <button class="btn btn-primary btn-lg" role="button">LIKE<span class=" glyphicon glyphicon-heart"></span></button>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
                     <button class="btn btn-primary btn-lg" role="button">ATTEND<span class=" glyphicon glyphicon-thumbs-up"></span></button>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
                     <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity.html'">Back</button>
                 </div>
             </div>
-            <div class="col-xs-1 col-sm-1"></div>
+            <div class="col-md-1"></div>
         </div>
     </div>
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
