--- a/activity.html
+++ b/activity.html
@@ -34,8 +34,8 @@
     <!-- This is a templete, do any thing between this line and the next comment line -->
     <div class="container-fluid">
         <div class="row-fluid">
-            <div class="col-xs-1 col-sm-1"></div>
-            <div class="col-xs-10 col-sm-10">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
                 <div class="btn-group">
                     <button type="button" class="btn btn-default">UPCOMING</button>
                     <button type="button" class="btn btn-default">HISTORY</button>
@@ -125,7 +125,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-1 col-sm-1"></div>
+            <div class="col-md-1"></div>
         </div>
     </div>
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
