meals, how to pass parameters using query

--- a/meals.html
+++ b/meals.html
@@ -28,7 +28,7 @@
     </script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Google fonts -->
@@ -152,6 +152,15 @@
             </div>
         </div>
     </div>
+
+    <script>
+    $(document).ready(function() {
+        var link = window.location.href;
+        var tokens = link.split("?");
+        var parameters = tokens[1].split("&");
+        console.log(parameters);
+    })
+    </script>
     <!-- This is a templete, do any thing between this line and the next comment line -->
 
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
