--- a/meals-create.html
+++ b/meals-create.html
@@ -8,7 +8,7 @@
     <title>Schedule Your Life - Meals - New Order</title>
 
     <!-- jQuery (necessary for Bootstrap's JavaSLipt plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Google fonts -->
@@ -37,12 +37,12 @@
 
     <div class="container-fluid">
         <div class="row-fluid meal-font">
-            <form role="form">
+            <form role="form" action="meals.html" method="get">
                 <div class="form-group">
                     <label>Resaurant</label>
                     <p></p>
                     <div id="rest_div">
-                        <select name="mydropdown">
+                        <select name="mydropdown_rest">
                             <option value="1">Chicken Shack</option>
                             <option value="2">Koi</option>
                             <option value="3">Burger King</option>
