--- a/meals-edit.html
+++ b/meals-edit.html
@@ -8,7 +8,7 @@
     <title>Schedule Your Life - Meals - Edit Order</title>
 
     <!-- jQuery (necessary for Bootstrap's JavaSLipt plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Google fonts -->
@@ -41,7 +41,7 @@
                     <label>Resaurant</label>
                     <p></p>
                     <div id="rest_div">
-                        <select name="mydropdown">
+                        <select name="mydropdown_rest">
                             <option value="1">Chicken Shack</option>
                             <option value="2">Koi</option>
                             <option value="3" selected>Burger King</option>
