--- a/navbar.html
+++ b/navbar.html
@@ -1,26 +1,33 @@
-<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <script src="js/navbar.js"></script>
-    <div class="navbar-header">
-        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a href="#" class="navbar-brand">LazyForce</a>
+<br/>
+<br/>
+<br/>
+<footer class="container-fluid">
+    <div class="row-fluid">
+        <nav class="nav nav-tab navbar-inverse navbar-fixed-bottom" role="navigation">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <script src="js/navbar.js"></script>
+            <div class="navbar-header">
+                <button type="button dropup" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="#" class="navbar-brand">LazyForce</a>
+            </div>
+            <!-- Collection of nav links and other content for toggling -->
+            <div id="navbarCollapse" class="collapse navbar-collapse show-footer">
+                <ul class="nav navbar-nav">
+                    <li id="activity-navbar"><a href="activity.html"><i class="fa fa-users fa-fw"></i>|activities</a>
+                    </li>
+                    <li id="repair-navbar"><a href="repair.html"><i class="fa fa-wrench fa-fw"></i>|repair</a>
+                    </li>
+                    <li id="meals-navbar"><a href="meals.html"><i class="fa fa-cutlery fa-fw"></i>|meals</a>
+                    </li>
+                    <li id="profile-navbar"><a href="profile.html"><i class="fa fa-cog fa-fw"></i>|profile</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </div>
-    <!-- Collection of nav links and other content for toggling -->
-    <div id="navbarCollapse" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-            <li id="activity-navbar"><a href="activity.html"><i class="fa fa-users fa-fw"></i>|activities</a>
-            </li>
-            <li id="repair-navbar"><a href="repair.html"><i class="fa fa-wrench fa-fw"></i>|repair</a>
-            </li>
-            <li id="meals-navbar"><a href="meals.html"><i class="fa fa-cutlery fa-fw"></i>|meals</a>
-            </li>
-            <li id="profile-navbar"><a href="profile.html"><i class="fa fa-cog fa-fw"></i>|profile</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+</footer>
