meals css modification

--- a/meals-create.html
+++ b/meals-create.html
@@ -88,6 +88,8 @@
                     <input type="date" class="form-control" id="mdate" value="" style="width: 230px;">
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <button type="submit" class="btn btn-default">Save as Favorite</button>
             </form>
         </div>
     </div>
