--- a/meals-edit.html
+++ b/meals-edit.html
@@ -50,8 +50,8 @@
                 <div class="form-group">
                     <label>Dishes</label>
                     <p></p>
-                    <div id="mydropdown1">
-                        <select name="mydropdown1" class="sr-only">
+                    <div id="mydropdown1" class="sr-only">
+                        <select name="mydropdown1">
                             <option value="1">CATFISH BONE IN -- 11.50</option>
                             <option value="3">CATFISH NUGGETS BONELESS -- 8.97</option>
                             <option value="3">PERCH -- 8.97</option>
