--- a/meals.html
+++ b/meals.html
@@ -60,7 +60,7 @@
                     <div class="btn-toolbar">
                         <div class="btn-group btn-group-lg">
                             <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-create.html'">
-                                Customize a new order
+                                Customize a New Order
                             </button>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                                 <span class="glyphicon glyphicon-map-marker"></span>&nbsp;Engelhalt Room 325
                             </li>
                             <li>
-                                <span class="glyphicon glyphicon-transfer"></span>&nbsp; Prepare to deliver
+                                <span class="glyphicon glyphicon-transfer"></span>&nbsp;Prepare to deliver
                                 <button type="submit" class="btn btn-small btn-primary" onclick="location.href='meals-edit.html'" style="float: right;">
                                     Edit
                                 </button>
