--- a/meals.html
+++ b/meals.html
@@ -55,30 +55,17 @@
     <div class="container-fluid">
         <div class="row-fluid meal-font">
             <div class="span4 text-left"></div>
-            <div class="span4 text-center">
-                <div class="btn-group btn-group-vertical panel panel-default">
-                    <div class="btn-toolbar">
-                        <div class="btn-group btn-group-lg">
-                            <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-create.html'">
-                                Customize a New Order
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="span4 text-left">Select a popular meal other people like</div>
             <p></p>
             <div class="span4 text-center">
                 <div class="btn-group btn-group-vertical panel panel-default">
-                    <div class="btn-toolbar">
-                        <div class="btn-group btn-group-regular">
-                            <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
-                                Noodle
-                            </button>
-                            <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
-                                Pizza
-                            </button>
-                        </div>
+                    <div class="btn-toolbar btn-group-regular">
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Noodle&nbsp;&nbsp;&nbsp;&nbsp;
+                        </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
+                            &nbsp;&nbsp;&nbsp;&nbsp;Pizza&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        </button>
                     </div>
                 </div>
             </div>
@@ -86,19 +73,29 @@
             <p></p>
             <div class="span4 text-center">
                 <div class="btn-group btn-group-vertical panel panel-default">
+                    <div class="btn-toolbar btn-group-regular">
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
+                            ChickenSack
+                        </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
+                            &nbsp;&nbsp;Subway&nbsp;&nbsp;
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="span4 text-left">Want something new?</div>
+            <p></p>
+            <div class="span4 text-center">
+                <div class="btn-group btn-group-vertical panel panel-default">
                     <div class="btn-toolbar">
                         <div class="btn-group btn-group-regular">
-                            <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
-                                ChickenSack
-                            </button>
-                            <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
-                                Subway
+                            <button type="submit" class="btn btn-xlarge btn-primary" onclick="location.href='meals-create.html'">
+                                Customize a New Order
                             </button>
                         </div>
                     </div>
                 </div>
             </div>
-
             <div class="span4 text-left">My Order History</div>
             <p></p>
             <div class="panel panel-primary collapse-group">
@@ -156,7 +153,10 @@
     $(document).ready(function() {
         var link = window.location.href;
         var tokens = link.split("?");
-        var parameters = tokens[1].split("&");
+        var parameters;
+        if (tokens.length > 1) {
+            parameters = tokens[1].split("&");
+        }
     })
     </script>
     <!-- This is a templete, do any thing between this line and the next comment line -->
