--- a/meals-edit.html
+++ b/meals-edit.html
@@ -33,64 +33,62 @@
 
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
-    <div class="container-fluid">
-        <div class="row-fluid meal-font">
-            <form role="form">
-                <div class="form-group">
-                    <label>Resaurant</label>
-                    <p></p>
-                    <div id="rest_div">
-                        <select name="mydropdown_rest">
-                            <option value="1">Chicken Shack</option>
-                            <option value="2">Koi</option>
-                            <option value="3" selected>Burger King</option>
-                        </select>
-                    </div>
+    <div class="container-fluid meal-font row-fluid">
+        <form role="form">
+            <div class="form-group">
+                <label>Resaurant</label>
+                <p></p>
+                <div id="rest_div">
+                    <select name="mydropdown_rest">
+                        <option value="1">Chicken Shack</option>
+                        <option value="2">Koi</option>
+                        <option value="3" selected>Burger King</option>
+                    </select>
                 </div>
-                <div class="form-group">
-                    <label>Dishes</label>
-                    <p></p>
-                    <div id="mydropdown1" class="sr-only">
-                        <select name="mydropdown1">
-                            <option value="1">CATFISH BONE IN -- 11.50</option>
-                            <option value="3">CATFISH NUGGETS BONELESS -- 8.97</option>
-                            <option value="3">PERCH -- 8.97</option>
-                            <option value="2">TILAPIA FILLETS -- 11.50</option>
-                        </select>
-                    </div>
+            </div>
+            <div class="form-group">
+                <label>Dishes</label>
+                <p></p>
+                <div id="mydropdown1" class="sr-only">
+                    <select name="mydropdown1">
+                        <option value="1">CATFISH BONE IN -- 11.50</option>
+                        <option value="3">CATFISH NUGGETS BONELESS -- 8.97</option>
+                        <option value="3">PERCH -- 8.97</option>
+                        <option value="2">TILAPIA FILLETS -- 11.50</option>
+                    </select>
+                </div>
 
-                    <div id="mydropdown2" class="sr-only">
-                        <select name="mydropdown2">
-                            <option value="1">Kung Bao chicken -- 12.99</option>
-                            <option value="2">Szechwan Red Snapper Whole Fish -- 25.99</option>
-                            <option value="3">Hot Pepper Chicken -- 12.99</option>
-                        </select>
-                    </div>
+                <div id="mydropdown2" class="sr-only">
+                    <select name="mydropdown2">
+                        <option value="1">Kung Bao chicken -- 12.99</option>
+                        <option value="2">Szechwan Red Snapper Whole Fish -- 25.99</option>
+                        <option value="3">Hot Pepper Chicken -- 12.99</option>
+                    </select>
+                </div>
 
-                    <div id="mydropdown3">
-                        <select name="mydropdown3">
-                            <option value="1" selected>Sausage & Cheese Muffin Sandwich Meal</option>
-                            <option value="2">Southwestern Breakfast Burrito Meal</option>
-                            <option value="3">Sausage Biscuit Sandwich Meal</option>
-                        </select>
-                    </div>
+                <div id="mydropdown3">
+                    <select name="mydropdown3">
+                        <option value="1" selected>Sausage & Cheese Muffin Sandwich Meal</option>
+                        <option value="2">Southwestern Breakfast Burrito Meal</option>
+                        <option value="3">Sausage Biscuit Sandwich Meal</option>
+                    </select>
                 </div>
-                <div class="form-group">
-                    <label>Location</label>
-                    <input type="location" class="form-control" name="Location" value="Engelhalt Room 325" style="width: 230px;">
-                </div>
-                <div class="form-group">
-                    <label>Time</label>
-                    <input type="time" class="form-control" id="mtime" value="12:30" style="width: 230px;">
-                </div>
-                <div class="form-group">
-                    <label>Date</label>
-                    <input type="date" class="form-control" id="mdate" value="2013-03-02" style="width: 230px;">
-                </div>
-                <button type="submit" class="btn btn-default">Re-submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
-                <button class="btn btn-default">Delete Order</button>
-            </form>
-        </div>
+            </div>
+            <div class="form-group">
+                <label>Location</label>
+                <input type="location" class="form-control" name="Location" value="Engelhalt Room 325" style="width: 230px;">
+            </div>
+            <div class="form-group">
+                <label>Time</label>
+                <input type="time" class="form-control" id="mtime" value="12:30" style="width: 230px;">
+            </div>
+            <div class="form-group">
+                <label>Date</label>
+                <input type="date" class="form-control" id="mdate" value="2013-03-02" style="width: 230px;">
+            </div>
+            <button type="submit" class="btn btn-default">Re-submit</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <button class="btn btn-default">Delete Order</button>
+        </form>
     </div>
 
     <script>
