--- a/repair-ask-for-help.html
+++ b/repair-ask-for-help.html
@@ -54,7 +54,7 @@
 </head>
 
 <body>
-
+    <div id="include_navBar"></div>
     <div class="span4 text-center"><h2>ASK FOR HELP</h2></div>
     <form role="form">
         <div class="form-group">
@@ -105,19 +105,7 @@
         <button class="btn btn-default" onclick="location.href='repair-ask-for-help.html'">Clear All</button>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
         <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
-    </div><br><br><br>
-
-    <!-- DO NOT MODIFY THOSE FOLLOWING -->
-    <div id="include_navBar"></div>
-
-
-
-    <!-- This is a templete, do any thing between this line and the next comment line -->
-
-
-
-    <!-- DO NOT MODIFY THOSE FOLLOWING -->
-    <div id="include_navBar"></div>
+    </div>
 </body>
 
 </html>
