--- a/meals-create.html
+++ b/meals-create.html
@@ -35,7 +35,7 @@
     <!-- This is a templete, do any thing between this line and the next comment line -->
 
     <div class="container-fluid meal-font row-fluid">
-        <form role="form" action="meals.html" method="get">
+        <form role="form" action="meals-submit.html" method="get">
             <div class="form-group">
                 <label>Resaurant</label>
                 <p></p>
