--- a/meals-submit.html
+++ b/meals-submit.html
@@ -54,8 +54,9 @@
 </head>
 
 <body>
+    <div id="include_navBar"></div>
 
-    <div class="span4 text-center meals">
+    <div class="span4 text-center meal-font">
         <h1>Submission Succeed!</h1>
         <button class="btn btn-default" onclick="location.href='meals.html'">Back</button>
     </div>
