profile.html, template.css

--- a/profile.html
+++ b/profile.html
@@ -35,31 +35,52 @@
     <div id="include_navBar"></div>
     <div class="container-fluid">
         <div class="row-fluid">
-            <div class="col-xs-1 col-sm-1 text-center"></div>
-            <div class="col-xs-10 col-sm-10 text-center">
-                <h1 class="text-center">My Profile</h1><br><br>
-                <button type="button" class="btn btn-primary btn-lg text0right">Edit Profile</button><br>
-                <img src="img/wildcat.png" class="img-responsive" alt="Responsive image">
-                <ul class="list-group">
-                    <li class="list-group-item list-group-item-success text-left">
-                        <strong>Your Name:</strong> P. Linda
-                    </li><br><br>
-                    <li class="list-group-item list-group-item-info text-left">
-                        <strong>Your Location:</strong> Engelhart Room 617
-                    </li><br><br>
-                    <li class="list-group-item list-group-item-warning text-left">
-                        <strong>Your Email:</strong> Linda@u.northwestern.edu
-                    </li><br><br>
-                    <li class="list-group-item list-group-item-danger text-left">
-                        <strong>Your Gender:</strong> Male
-                    </li><br><br>
-                    <li class="list-group-item list-group-item-success text-left">
-                        <strong>Whats up:</strong> Happy every day!
-                    </li><br><br>
-                </ul>
-            </div>
-            <div class="col-xs-1 col-sm-1 text-center"></div>
+            <!-- <div class="col-xs-1 col-sm-1 text-center"></div> -->
+            <!-- <div class="col-xs-10 col-sm-10 text-center"> -->
+            <h1 class="text-center">My Profile</h1>
+            <br>
+            <table border="0">
+                <tr>
+                    <th>
+                        <img src="img/wildcat.png" class="img-responsive circular" alt="Responsive image">
+                    </th>
+                    <th valign="bottom" align="right">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button type="button" class="btn">Edit Profile</button>
+                    </th>
+                </tr>
+            </table>
+            <p></p>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-success text-left">
+                    <strong>Your Name:</strong>P. Linda
+                </li>
+                <br>
+                <br>
+                <li class="list-group-item list-group-item-info text-left">
+                    <strong>Your Location:</strong>Engelhart Room 617
+                </li>
+                <br>
+                <br>
+                <li class="list-group-item list-group-item-warning text-left">
+                    <strong>Your Email:</strong>Linda@u.northwestern.edu
+                </li>
+                <br>
+                <br>
+                <li class="list-group-item list-group-item-danger text-left">
+                    <strong>Your Gender:</strong>Male
+                </li>
+                <br>
+                <br>
+                <li class="list-group-item list-group-item-success text-left">
+                    <strong>Whats up:</strong>Happy every day!
+                </li>
+                <br>
+                <br>
+            </ul>
         </div>
+        <div class="col-xs-1 col-sm-1 text-center"></div>
+    </div>
     </div>
 </body>
 
