--- a/activity-details.html
+++ b/activity-details.html
@@ -33,41 +33,63 @@
 <body>
     <div id="include_navBar"></div>
     <!-- This is a templete, do any thing between this line and the next comment line -->
-    <h2 class="text-center">ACTIVITY DETAILS<small>(Upcoming)</small></h2>
+    <h2 class="text-center">ACTIVITY DETAILS
+        <small>(Upcoming)</small>
+    </h2>
     <br>
-    <div class="container-fluid">
+    <div class="container-fluid meal-font">
         <div class="row-fluid">
             <div class="col-md-1"></div>
             <div class="col-md-10">
-                
+
                 <br>
                 <div class="panel panel-primary">
                     <div class="panel-heading">NBA GALA!</div>
                     <div class="panel-body">
-                        <strong><span class=" glyphicon glyphicon-time"></span>TIME</strong><br>
-                        02-02 20:00-22:00<br>
-                        <strong><span class=" glyphicon glyphicon-map-marker"></span>LOCATION</strong><br>
-                        Engelhalt Room 325<br>
-                        <strong><span class=" glyphicon glyphicon-tag"></span>TAG</strong><br>
-                        Basketball Game<br>
-                        <strong><span class=" glyphicon glyphicon-upload"></span>CAPACITY</strong><br>
-                        10<small>(people)</small><br>
-                        <strong><span class=" glyphicon glyphicon-user"></span>HOST INFOMATION</strong><br>
+                        <strong>
+                            <span class=" glyphicon glyphicon-time"></span>&nbsp;TIME</strong>
+                        <br>02-02 20:00-22:00
+                        <br>
+                        <strong>
+                            <span class=" glyphicon glyphicon-map-marker"></span>&nbsp;LOCATION</strong>
+                        <br>Engelhalt Room 325
+                        <br>
+                        <strong>
+                            <span class=" glyphicon glyphicon-tag"></span>&nbsp;TAG</strong>
+                        <br>Basketball Game
+                        <br>
+                        <strong>
+                            <span class=" glyphicon glyphicon-upload"></span>&nbsp;CAPACITY</strong>
+                        <br>10
+                        <small>(people)</small>
+                        <br>
+                        <strong>
+                            <span class=" glyphicon glyphicon-user"></span>&nbsp;HOST INFOMATION</strong>
+                        <br>
                         <li>Name: P. Linda</li>
                         <li>Email: Linda@u.northwestern.edu</li>
                         <li>Tel: 847-964-0087</li>
-                        <strong><span class=" glyphicon glyphicon-list-alt"></span>DESCRIPTION</strong><br>
-                        Are you feel bored of stressful study? Tonight we will watch NBA all-star game! Come and join us!<br>
-                        <strong><span class=" glyphicon glyphicon-picture"></span>PICTURE</strong><br>
-                        <img src="..." class="img-responsive" alt="Responsive image"><br>                        
+                        <strong>
+                            <span class=" glyphicon glyphicon-list-alt"></span>&nbsp;DESCRIPTION</strong>
+                        <br>Are you feel bored of stressful study? Tonight we will watch NBA all-star game! Come and join us!
+                        <br>
+                        <strong>
+                            <span class=" glyphicon glyphicon-picture"></span>&nbsp;PICTURE</strong>
+                        <br>
+                        <img src="..." class="img-responsive" alt="Responsive image">
+                        <br>
                     </div>
                 </div>
                 <div class="center">
-                    <button class="btn btn-primary btn-lg" role="button">LIKE<span class=" glyphicon glyphicon-heart"></span></button>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
-                    <button class="btn btn-primary btn-lg" role="button">ATTEND<span class=" glyphicon glyphicon-thumbs-up"></span></button>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
-                    <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity.html'">Back</button>
+                    <button class="btn btn-primary btn-lg" role="button">&nbsp;LIKE
+                        <span class=" glyphicon glyphicon-heart"></span>
+                    </button>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <button class="btn btn-primary btn-lg" role="button">&nbsp;ATTEND
+                        <span class=" glyphicon glyphicon-thumbs-up"></span>
+                    </button>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity.html'">&nbsp;Back</button>
                 </div>
             </div>
             <div class="col-md-1"></div>
