--- a/profile.html
+++ b/profile.html
@@ -51,29 +51,29 @@
                 </tr>
             </table>
             <p></p>
-            <ul class="list-group">
+            <ul class="list-group meal-font">
                 <li class="list-group-item list-group-item-success text-left">
-                    <strong>Your Name:</strong>P. Linda
+                    <strong>Your Name:&nbsp;</strong>P. Linda
                 </li>
                 <br>
                 <br>
                 <li class="list-group-item list-group-item-info text-left">
-                    <strong>Your Location:</strong>Engelhart Room 617
+                    <strong>Your Location:&nbsp;</strong>Engelhart Room 617
                 </li>
                 <br>
                 <br>
                 <li class="list-group-item list-group-item-warning text-left">
-                    <strong>Your Email:</strong>Linda@u.northwestern.edu
+                    <strong>Your Email:&nbsp;</strong>Linda@u.northwestern.edu
                 </li>
                 <br>
                 <br>
                 <li class="list-group-item list-group-item-danger text-left">
-                    <strong>Your Gender:</strong>Male
+                    <strong>Your Gender:&nbsp;</strong>Male
                 </li>
                 <br>
                 <br>
                 <li class="list-group-item list-group-item-success text-left">
-                    <strong>Whats up:</strong>Happy every day!
+                    <strong>Whats up:&nbsp;</strong>Happy every day!
                 </li>
                 <br>
                 <br>
