--- a/activity-confirm.html
+++ b/activity-confirm.html
@@ -8,7 +8,7 @@
     <title>Schedule Your Life</title>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Google fonts -->
@@ -37,29 +37,43 @@
         <div class="row-fluid">
             <div class="col-md-1"></div>
             <div class="col-md-10">
-                <div class="alert alert-info"><h3>Please confirm your information and click the SUBMIT button below.</h3></div>
-                <div class="panel panel-primary">  
+                <div class="alert alert-info meal-font">
+                    Please confirm your information and click the SUBMIT button below.
+                </div>
+                <div class="panel panel-primary meal-font">
                     <div class="container-fluid">
                         <div class="row-fluid">
                             <div class="span4 text-left">
-                                <li><strong>TITLE:</strong> XXXXXX</li>
-                                <li><strong>TIME:</strong> XXXXXX</li>
-                                <li><strong>LOCATION:</strong> XXXXXX</li>
-                                <li><strong>TAG:</strong> XXXXX</li>
-                                <li><strong>CAPACITY:</strong> XXXXX</li>
-                                <li><strong>HOST INFOMATION:</strong> XXXXX</li>
-                                <li><strong>DESCRIPTION:</strong> XXXXXXXXXX</li>
-                                <li><strong>PICTURE:</strong><img src="..." class="img-responsive" alt="Responsive image"></li> 
+                                <p></p>
+                                <li>
+                                    <strong>TITLE:</strong>XXXXXX</li>
+                                <li>
+                                    <strong>TIME:</strong>XXXXXX</li>
+                                <li>
+                                    <strong>LOCATION:</strong>XXXXXX</li>
+                                <li>
+                                    <strong>TAG:</strong>XXXXX</li>
+                                <li>
+                                    <strong>CAPACITY:</strong>XXXXX</li>
+                                <li>
+                                    <strong>HOST INFOMATION:</strong>XXXXX</li>
+                                <li>
+                                    <strong>DESCRIPTION:</strong>XXXXXXXXXX</li>
+                                <li>
+                                    <strong>PICTURE:</strong>
+                                    <img src="img/activity.png" class="img-responsive" alt="Responsive image">
+                                </li>
+                                <p></p>
                             </div>
                         </div>
-                    </div>   
+                    </div>
                 </div>
                 <div class="row">
                     <div class="center">
                         <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity-succeed.html'">Submit</button>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity.html'">Main Menu</button>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity-launch.html'">Back</button>
                     </div>
                 </div>
