--- a/activity-succeed.html
+++ b/activity-succeed.html
@@ -8,7 +8,7 @@
     <title>Schedule Your Life</title>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Google fonts -->
@@ -38,7 +38,9 @@
             <div class="col-xs-1 col-sm-1"></div>
             <div class="col-xs-10 col-sm-10">
                 <div class="alert alert-success">Successfully submitted!</div>
-                <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity.html'">BACK TO MAIN MENU</button>
+                <div align="center">
+                    <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity.html'">BACK TO MAIN MENU</button>
+                </div>
             </div>
         </div>
     </div>
