style layout modification

--- a/activity.html
+++ b/activity.html
@@ -8,7 +8,7 @@
     <title>Schedule Your Life</title>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Google fonts -->
@@ -36,7 +36,7 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="col-md-1"></div>
-            <div class="col-md-10">
+            <div class="col-md-20">
                 <div class="btn-group">
                     <button type="button" class="btn btn-default">UPCOMING</button>
                     <button type="button" class="btn btn-default">HISTORY</button>
@@ -68,7 +68,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-primary">
+                <div class="panel panel-primary meal-font">
                     <div class="panel-heading">NBA GALA!</div>
                     <div class="panel-body">
                         <ul>
@@ -82,12 +82,13 @@
                                 <li>
                                     <span class=" glyphicon glyphicon-phone"></span>
                                     <abbr title="Phone">Tel:</abbr>(123) 456-7890</li>
-                                <button type="submit" class="btn btn-primary" onclick="location.href='activity-details.html'">See Details</button>
+                                <p></p>
+                                <button type="submit" class="btn" onclick="location.href='activity-details.html'">See Details</button>
                             </strong>
                         </ul>
                     </div>
                 </div>
-                <div class="panel panel-primary">
+                <div class="panel panel-primary meal-font">
                     <div class="panel-heading">MAHJONG</div>
                     <div class="panel-body">
                         <ul>
@@ -101,12 +102,13 @@
                                 <li>
                                     <span class=" glyphicon glyphicon-phone"></span>
                                     <abbr title="Phone">Tel:</abbr>(222) 333-4455</li>
-                                <button type="submit" class="btn btn-primary">See Details</button>
+                                <p></p>
+                                <button type="submit" class="btn">See Details</button>
                             </strong>
                         </ul>
                     </div>
                 </div>
-                <div class="panel panel-primary">
+                <div class="panel panel-primary meal-font">
                     <div class="panel-heading">LOL</div>
                     <div class="panel-body">
                         <ul>
@@ -120,7 +122,8 @@
                                 <li>
                                     <span class=" glyphicon glyphicon-phone"></span>
                                     <abbr title="Phone">Tel:</abbr>(999) 888-7766</li>
-                                <button type="submit" class="btn btn-primary">See Details</button>
+                                <p></p>
+                                <button type="submit" class="btn">See Details</button>
                             </strong>
                         </ul>
                     </div>
@@ -130,7 +133,7 @@
         </div>
     </div>
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
-    
+
 </body>
 
 </html>
