--- a/meals-submit.html
+++ b/meals-submit.html
@@ -57,8 +57,11 @@
     <div id="include_navBar"></div>
 
     <div class="span4 text-center meal-font">
-        <h1>Submission Succeed!</h1>
-        <button class="btn btn-default" onclick="location.href='meals.html'">Back</button>
+        <div class="col-xs-1 col-sm-1"></div>
+        <div class="col-xs-10 col-sm-10">
+            <div align="center" class="alert alert-success">Request successfully submitted!</div>
+            <button class="btn btn-default" onclick="location.href='meals.html'">Back</button>
+        </div>
     </div>
 
     <!-- This is a templete, do any thing between this line and the next comment line -->
