--- a/activity-succeed.html
+++ b/activity-succeed.html
@@ -37,7 +37,7 @@
         <div class="row-fluid">
             <div class="col-xs-1 col-sm-1"></div>
             <div class="col-xs-10 col-sm-10">
-                <div class="alert alert-success">Successfully submitted!</div>
+                <div align="center" class="alert alert-success">Successfully submitted!</div>
                 <div align="center">
                     <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity.html'">BACK TO MAIN MENU</button>
                 </div>
